@@ -1,20 +1,14 @@
 package dev.jb0s.blockgameenhanced.helper;
 
-import lombok.Getter;
 import lombok.SneakyThrows;
-import net.minecraft.client.MinecraftClient;
+import net.fabricmc.loader.api.FabricLoader;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class PathHelper {
-    private static final String MINECRAFT_FOLDER_NAME = ".minecraft";
-    private static final String BLOCKGAME_FOLDER_NAME = ".blockgame";
-    private static final Path GAME_FOLDER_PATH = Paths.get(getAppdataPath(), BLOCKGAME_FOLDER_NAME);
-
-    @Getter
-    private static final Path minecraftFolderPath = Paths.get(getAppdataPath(), MINECRAFT_FOLDER_NAME);
+    private static final String BLOCKGAME_FOLDER_NAME = "blockgame";
+    private static final Path GAME_FOLDER_PATH = Path.of(FabricLoader.getInstance().getConfigDir() + "/"+BLOCKGAME_FOLDER_NAME);
 
     @SneakyThrows
     public static Path getBlockgamePath() {
@@ -23,14 +17,6 @@ public class PathHelper {
             Files.createDirectory(GAME_FOLDER_PATH);
         }
 
-        return GAME_FOLDER_PATH;
-    }
-
-    public static String getAppdataPath() {
-        if(MinecraftClient.IS_SYSTEM_MAC) {
-            return System.getProperty("user.home") + "/Library/Application Support";
-        }
-
-        return System.getenv("APPDATA");
+        return Path.of(GAME_FOLDER_PATH+"/");
     }
 }
